--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Project Researcher"
   location         : "Tokyo, Japan"
-  employer         : "International Research Center for Neurointelligence, The University of Tokyo"
+  employer         : "The University of Tokyo"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=GOOGLE_SCHOLAR_ID"
   email            : "li.ruichen@mail.u-tokyo.ac.jp; liruichen0213@outlook.com"
