--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/profile.php?id=61553814676886"
+  facebook         : "Ruichen Li"
   foursquare       :
   github           : "RuichenLi0213"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/liruichen0213/"
+  instagram        : "liruichen0213"
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "Ruichen Li"
