--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author:
   instagram        : "liruichen0213"
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "Ruichen Li"
+  linkedin         :
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : "https://orcid.org/0000-0003-0692-0601"
   pinterest        :
@@ -50,11 +50,11 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  X                : "https://x.com/RuichenLi104902"
+  X                :
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCxffVlUNV4uWEGHTmflWjsg"
+  youtube          :
   wikipedia        :
 
 
