--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "Ruichen Li"
+  facebook         :
   foursquare       :
   github           : "RuichenLi0213"
   google_plus      :
   keybase          :
-  instagram        : "liruichen0213"
+  instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
