--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 # Site Settings
 title                    : "Ruichen Li, Ph.D."
 description              : "Every obstacle is a new parameter for the algorithm."
+description              : ""
 repository               : "RuichenLi0213/RuichenLi0213.github.io"
 google_scholar_stats_use_cdn : true
 
