--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Tokyo, Japan"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=GOOGLE_SCHOLAR_ID"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Ruichen-Li-7"
   uri              : "https://developmental-robotics.jp/en/members/ruichen_li/"
   bitbucket        :
   codepen          :
