--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,16 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
+  - title: "Greeting"
+    url: "/#Greeting"
 
-  - title: "News"
-    url: "/#-news"
+  - title: "Experiences"
+    url: "/#-Experiences"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "/#-Publications"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "Conferences"
+    url: "/#-Conferences"
 
   - title: "Educations"
-    url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+    url: "/#-Educations"
