Add 'News' link to main navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,9 @@
 main:
   - title: "Greeting"
     url: "/#Greeting"
+    
+  - title: "News"
+    url: "/#-News"
 
   - title: "Experiences"
     url: "/#-Experiences"
