--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Experiences"
     url: "/#-Experiences"
+    
+  - title: "Projects"
+    url: "/#-Projects"
 
   - title: "Publications"
     url: "/#-Publications"
